# SmartTank-HMI

./: CHANGELOG.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/lvgl__lvgl/examples/others/imgfont/: index.rst
main/: CMakeLists.txt  lvgl_port.c  lvgl_port.h  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/app/: app.c  app.h
main/drivers/: rs485_port.c  rs485_port.h  rtc_pcf85063.c  rtc_pcf85063.h  waveshare_analog_8ch.c  waveshare_analog_8ch.h
main/model/: app_model.c  app_model.h  measurement_history.c  measurement_history.h  weather_location.h
main/protocol/: modbus_rtu_client.c  modbus_rtu_client.h
main/screens/: screen_alarms.c  screen_alarms.h  screen_boot.c  screen_boot.h  screen_dashboard.c  screen_dashboard.h  screen_display_test.c  screen_display_test.h  screen_history.c  screen_history.h  screen_info.c  screen_info.h  screen_service.c  screen_service.h  screen_settings.c  screen_settings.h  screen_settings_weather.c  screen_settings_weather.h  screen_tank_calibration.c  screen_tank_calibration.h  screen_tank_detail.c  screen_tank_detail.h  screen_weather_detail.c  screen_weather_detail.h  screen_weather_location.c  screen_weather_location.h  screen_well_calibration.c  screen_well_calibration.h  screen_well_detail.c  screen_well_detail.h  weather_detail_integration.c  weather_detail_integration.h  well_detail_integration.c  well_detail_integration.h
main/services/: alarm_service.c  alarm_service.h  analog_module_service.c  analog_module_service.h  clock_service.c  clock_service.h  data_simulator.c  data_simulator.h  ntp_service.c  ntp_service.h  ota_service.c  ota_service.h  settings_storage.c  settings_storage.h  weather_geocoding.c  weather_geocoding.h  weather_location_storage.c  weather_location_storage.h  weather_service.c  weather_service.h  well_settings.c  well_settings.h  wifi_service.c  wifi_service.h
main/ui/: panel_icons.c  panel_icons.h  theme.c  theme.h
main/widgets/: bottom_nav.c  bottom_nav.h  tank_widget.c  tank_widget.h  top_status_bar.c  top_status_bar.h  weather_widget.c  weather_widget.h  weather_widget_compat.c  well_widget.c  well_widget.h  widget_common.c  widget_common.h
